@@ -99,6 +99,12 @@
    </td>
   </tr>
 
+  <tr>
+   <td align="right">[% LxERP.t8('Interpolate variables in texts of positions') %]</td>
+   <td>[% L.yes_no_tag('defaults.print_interpolate_variables_in_positions', SELF.defaults.print_interpolate_variables_in_positions) %]</td>
+   <td>[% LxERP.t8('Whether or not to replace variable placeholders such as "<%invdate%>" in texts in positions such as the part description by the record\'s actual value') %]</td>
+  </tr>
+
   <tr><td class="listheading" colspan="4">[% LxERP.t8("Currencies") %]</td></tr>
 
   <tr>
